// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateVault renders component 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message=""
    open={false}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          direction="row"
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            className="welcome-mock"
            item={true}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="h4"
            >
              Hey there!
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              gutterBottom={true}
              variant="body1"
            >
              Zbay vault is not configured on this computer. In order to proceed you need to choose a password for your secure vault.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`CreateVault renders error 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message=""
    open={false}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message="test error"
    onClose={[MockFunction]}
    open={true}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          direction="row"
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            className="welcome-mock"
            item={true}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="h4"
            >
              Hey there!
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              gutterBottom={true}
              variant="body1"
            >
              Zbay vault is not configured on this computer. In order to proceed you need to choose a password for your secure vault.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;

exports[`CreateVault renders inProgress 1`] = `
<Memo(WithStyles(WindowWrapper))>
  <Memo(WithStyles(Snackbar))
    fullWidth={true}
    message="creating"
    open={true}
    variant="loading"
  />
  <Memo(WithStyles(Snackbar))
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="gridRoot-mock"
    container={true}
    justify="center"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Paper))
        className="paper-mock"
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          direction="row"
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            className="welcome-mock"
            item={true}
          >
            <WithStyles(ForwardRef(Typography))
              gutterBottom={true}
              variant="h4"
            >
              Hey there!
            </WithStyles(ForwardRef(Typography))>
            <WithStyles(ForwardRef(Typography))
              align="justify"
              gutterBottom={true}
              variant="body1"
            >
              Zbay vault is not configured on this computer. In order to proceed you need to choose a password for your secure vault.
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
          >
            <VaultCreator
              buttonStyles="button-mock"
              className="vault-mock"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Paper))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(WindowWrapper))>
`;
